<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/detail"
    tools:context=".ui.detail.CoinDetailFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/obverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/obverse"
            app:drawableTopCompat="@drawable/ic_default_coin" />

        <TextView
            android:id="@+id/reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/reverse"
            app:drawableTopCompat="@drawable/ic_default_coin" />

    </LinearLayout>


    <EditText
        android:id="@+id/coinCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/country"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/coinDenomination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/denomination"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/coinYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/year"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/coinMintMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/mint_mark"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/coinNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/notes"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="18sp" />

</LinearLayout>